tests/lean/297.lean.expected.out
297.lean:1:10-1:11: error: typeclass instance problem is stuck, it is often due to metavariables
  OfNat (Sort ?u) 0
